--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>GS1_V2</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUI_hqf3GJQ7c80e0rK9aki1fT6kDVuiU&libraries=places" async defer ></script>
+
   </head>
   <body>
     <div id="root"></div>
